[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/Cave/CaveEntrance.png" type="Texture" id=1]
[ext_resource path="res://World/Cave/CaveEntrace.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 11.052

[sub_resource type="CircleShape2D" id=2]
radius = 15.5506

[node name="CaveEntrace" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CaveInside" type="Position2D" parent="."]

[node name="CaveOutside" type="Position2D" parent="."]

[node name="CaveExit" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionOut" type="CollisionShape2D" parent="CaveExit"]
shape = SubResource( 1 )

[node name="CaveIn" type="Area2D" parent="."]

[node name="CollisionIn" type="CollisionShape2D" parent="CaveIn"]
position = Vector2( 0, 16 )
shape = SubResource( 2 )

[connection signal="body_entered" from="CaveExit" to="." method="_on_CaveExit_body_entered"]
[connection signal="body_entered" from="CaveIn" to="." method="_on_CaveIn_body_entered"]
